--- a/Web/index.html
+++ b/Web/index.html
@@ -38,16 +38,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <!--Header-->
 <div class="agileits_header">
-    <div class="container">
-        <div class="product_list_header">
-            <form action="#" method="post" class="last">
-                <input type="hidden" name="cmd" value="_cart">
-                <input type="hidden" name="display" value="1">
-                <button class="w3view-cart" type="submit" name="submit" value=""><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
-            </form>
-        </div>
-        <div class="clearfix"> </div>
-    </div>
+	<div class="container">
+		<div class="product_list_header">
+			<form action="#" method="post" class="last">
+				<input type="hidden" name="cmd" value="_cart">
+				<input type="hidden" name="display" value="1">
+				<button class="w3view-cart" type="submit" name="submit" value=""><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
+			</form>
+		</div>
+		<div class="clearfix"> </div>
+	</div>
 </div>
 
 <div class="logo_products">
@@ -82,6 +82,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="index.html" class="act">Home</a></li>
+                    <li><a href="register.html" class="act">Daftar Member</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -143,13 +144,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="hover14 column">
 						<div class="agile_top_brand_left_grid">
 							<div class="agile_top_brand_left_grid_pos">
-								<img src="images/offer.png" alt=" " class="img-responsive">
+								<!--<img src="images/offer.png" alt=" " class="img-responsive">-->
 							</div>
 							<div class="agile_top_brand_left_grid1">
 								<figure>
 									<div class="snipcart-item block">
 										<div class="snipcart-thumb">
-											<a href=""><img title=" " alt=" " src="images/nasi_goreng_jawa.jpg"></a>
+											<a href="detail.html"><img title=" " alt=" " src="images/nasi_goreng_jawa.jpg" class="gambar-makanan"></a>
 											<p>Nasi Goreng Jawa</p>
 											<h4>Rp 15.000,00</h4>
 										</div>
@@ -159,8 +160,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 													<input type="hidden" name="cmd" value="_cart">
 													<input type="hidden" name="add" value="1">
 													<input type="hidden" name="business" value=" ">
-													<input type="hidden" name="item_name" value="Nasi Goreng Jawa">
-													<input type="hidden" name="amount" value="15000">
+													<input type="hidden" name="item_name" value="Nasi Goreng Jawa" class="nama-makanan">
+													<input type="hidden" name="amount" value="15000" class="harga-makanan">
 													<input type="hidden" name="discount_amount" value="">
 													<input type="hidden" name="currency_code" value="IDR">
 													<input type="hidden" name="return" value=" ">
@@ -179,13 +180,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="hover14 column">
 						<div class="agile_top_brand_left_grid">
 							<div class="agile_top_brand_left_grid_pos">
-								<img src="images/offer.png" alt=" " class="img-responsive">
+								<!--<img src="images/offer.png" alt=" " class="img-responsive">-->
 							</div>
 							<div class="agile_top_brand_left_grid1">
 								<figure>
 									<div class="snipcart-item block">
 										<div class="snipcart-thumb">
-											<a href=""><img title=" " alt=" " src="images/pecel_madiun.jpg"></a>
+											<a href="detail.html"><img title=" " alt=" " src="images/pecel_madiun.jpg"></a>
 											<p>Nasi Pecel Madiun</p>
 											<h4>Rp 12.000,00</h4>
 										</div>
@@ -215,16 +216,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="hover14 column">
 						<div class="agile_top_brand_left_grid">
 							<div class="agile_top_brand_left_grid_pos">
-								<img src="images/offer.png" alt=" " class="img-responsive">
+								<!--<img src="images/offer.png" alt=" " class="img-responsive">-->
 							</div>
 							<div class="agile_top_brand_left_grid_pos">
-								<img src="images/offer.png" alt=" " class="img-responsive">
+								<!--<img src="images/offer.png" alt=" " class="img-responsive">-->
 							</div>
 							<div class="agile_top_brand_left_grid1">
 								<figure>
 									<div class="snipcart-item block">
 										<div class="snipcart-thumb">
-											<a href=""><img src="images/nasi-ayam-penyet.jpeg" alt=" " class="img-responsive"></a>
+											<a href="detail.html"><img src="images/nasi-ayam-penyet.jpeg" alt=" " class="img-responsive"></a>
 											<p>Nasi Ayam Penyet</p>
 											<h4>Rp 14.000,00</h4>
 										</div>
