Tambah login, edit tampilan, tambah menu checkout

--- a/Web/register.html
+++ b/Web/register.html
@@ -36,9 +36,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <body>
 
-<!--Header-->
+<!-- header -->
 <div class="agileits_header">
     <div class="container">
+        <div class="w3l_offers">
+
+        </div>
+        <div class="agile-login">
+            <ul>
+                <li><a href="register.html"> Daftar </a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="checkouts.html">Checkout</a></li>
+
+            </ul>
+        </div>
         <div class="product_list_header">
             <form action="#" method="post" class="last">
                 <input type="hidden" name="cmd" value="_cart">
@@ -53,18 +64,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="logo_products">
     <div class="container">
         <div class="w3ls_logo_products_left1">
-            <!--<ul class="phone_email">-->
-            <!--<li><i class="fa fa-phone" aria-hidden="true"></i>Order online or call us : (+0123) 234 567</li>-->
-            <!---->
-            <!--</ul>-->
+            <ul class="phone_email">
+
+
+            </ul>
         </div>
         <div class="w3ls_logo_products_left">
-            <h1><a href="index.html">Food Kost</a></h1>
+            <h1><a href="index.html">FOOD KOST</a></h1>
         </div>
+        <!--	<div class="w3l_search">
+                <form action="#" method="post">
+                    <input type="search" name="Search" placeholder="Search for a Product..." required="">
+                    <button type="submit" class="btn btn-default search" aria-label="Left Align">
+                        <i class="fa fa-search" aria-hidden="true"> </i>
+                    </button>
+                    <div class="clearfix"></div>
+                </form>
+            </div> -->
 
         <div class="clearfix"> </div>
     </div>
 </div>
+<!-- //header -->
 
 <!-- navigation -->
 <div class="navigation-agileits">
@@ -82,7 +103,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="index.html" class="act">Home</a></li>
-                    <li><a href="register.html" class="act">Daftar Member</a></li>
                 </ul>
             </div>
         </nav>
