--- a/Web/login.html
+++ b/Web/login.html
@@ -33,7 +33,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
     <!-- start-smoth-scrolling -->
 </head>
+
 <body>
+
 <!-- header -->
 <div class="agileits_header">
     <div class="container">
@@ -106,47 +108,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </nav>
     </div>
 </div>
-<!-- //navigation -->
-<div class="products">
+<!-- login -->
+<div class="login">
     <div class="container">
-        <div class="agileinfo_single">
+        <h2>Login Form</h2>
 
-            <div class="col-md-4 agileinfo_single_left">
-                <img id="example" src="images/nasi_goreng_jawa_med.jpg" alt=" " class="img-responsive">
-            </div>
-            <div class="col-md-8 agileinfo_single_right">
-                <h2>Nasi Goreng Jawa</h2>
-                <div class="w3agile_description">
-                    <h4>Description :</h4>
-                    <p>Nasi goreng Jawa adalah nasi goreng khas Jawa yang berbeda dengan nasi goreng China. Perbedaannya adalah nasi goreng China biasanya berwarna agak kuning karena dicampur kari untuk versi Kanton Singapura serta nasi goreng China RRC berwarna merah muda dengan lauk sayuran, daging babi dan udang atau nasi goreng dengan saus khusus. Nasi goreng Jawa biasanya dibumbui dengan sambal ulek yang membuat rasanya pedas dan dimasak dengan kayu atau anglo.</p>
+        <div class="login-form-grids animated wow slideInUp" data-wow-delay=".5s">
+            <form>
+                <input type="email" placeholder="Email Address" required=" " >
+                <input type="password" placeholder="Password" required=" " >
+                <div class="forgot">
+                    <a href="#">Forgot Password?</a>
                 </div>
-                <div class="snipcart-item block">
-                    <div class="snipcart-thumb agileinfo_single_right_snipcart">
-                        <h4 class="m-sing">Rp 15.000,00</h4>
-                    </div>
-                    <div class="snipcart-details agileinfo_single_right_details">
-                        <form action="#" method="post">
-                            <fieldset>
-                                <input type="hidden" name="cmd" value="_cart">
-                                <input type="hidden" name="add" value="1">
-                                <input type="hidden" name="business" value=" ">
-                                <input type="hidden" name="item_name" value="Nasi Goreng Jawa" class="nama-makanan">
-                                <input type="hidden" name="amount" value="15000" class="harga-makanan">
-                                <input type="hidden" name="discount_amount" value="">
-                                <input type="hidden" name="currency_code" value="IDR">
-                                <input type="hidden" name="return" value=" ">
-                                <input type="hidden" name="cancel_return" value=" ">
-                                <input type="submit" name="submit" value="Add to cart" class="button">
-                            </fieldset>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="clearfix"> </div>
+                <input type="submit" value="Login">
+            </form>
         </div>
     </div>
 </div>
-
+<!-- //login -->
 <!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
 <!-- top-header and slider -->
