Edit login, register, tambah icon logo

--- a/Web/register.html
+++ b/Web/register.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Food Kost</title>
+    <link rel="shortcut icon" href="images/logofc.png" type="image/png">
     <!-- for-mobile-apps -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -113,7 +114,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container">
         <h2>Daftar Member</h2>
         <div class="login-form-grids">
-            <form action="#" method="post">
+            <form>
                 <h5>Data Diri</h5>
                 <input class="hide" type="text">
                 <input type="text" placeholder="Nama" required=" " >
@@ -126,11 +127,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <input type="text" placeholder="Username" required=" " >
                 <input type="password" placeholder="Password" required=" " >
                 <input type="password" placeholder="Confirm Password" required=" " >
-                <input type="submit" value="Register">
+                <input type="submit" value="Register" onclick="register()">
             </form>
         </div>
     </div>
     <!-- //register -->
+    <script src="js/custom.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
@@ -178,5 +180,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
     <!-- //main slider-banner -->
 
+</div>
 </body>
 </html>
