--- a/Web/checkouts.html
+++ b/Web/checkouts.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Food Kost</title>
+    <link rel="shortcut icon" href="images/logofc.png" type="image/png">
 	<!-- for-mobile-apps -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
