--- a/Web/login.html
+++ b/Web/login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Food Kost</title>
+    <link rel="shortcut icon" href="images/logofc.png" type="image/png">
     <!-- for-mobile-apps -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -111,15 +112,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- login -->
 <div class="login">
     <div class="container">
-        <h2>Login Form</h2>
+        <h2>Form Login</h2>
 
         <div class="login-form-grids animated wow slideInUp" data-wow-delay=".5s">
-            <form>
-                <input type="email" placeholder="Email Address" required=" " >
+            <form action="login.php">
+                <input type="text" placeholder="Username" required=" " >
                 <input type="password" placeholder="Password" required=" " >
-                <div class="forgot">
-                    <a href="#">Forgot Password?</a>
-                </div>
                 <input type="submit" value="Login">
             </form>
         </div>
