Tambah paket dan detail paket

--- a/Web/detail-paket.html
+++ b/Web/detail-paket.html
@@ -113,17 +113,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="agileinfo_single">
 
             <div class="col-md-4 agileinfo_single_left">
-                <img id="example" src="images/nasi_goreng_jawa_med.jpg" alt=" " class="img-responsive">
+                <img id="example" src="images/paket-1-med.png" alt=" " class="img-responsive">
             </div>
             <div class="col-md-8 agileinfo_single_right">
-                <h2>Nasi Goreng Jawa</h2>
+                <h2>Paket 1</h2>
                 <div class="w3agile_description">
                     <h4>Deskripsi :</h4>
-                    <p>Nasi goreng Jawa adalah nasi goreng khas Jawa yang berbeda dengan nasi goreng China. Perbedaannya adalah nasi goreng China biasanya berwarna agak kuning karena dicampur kari untuk versi Kanton Singapura serta nasi goreng China RRC berwarna merah muda dengan lauk sayuran, daging babi dan udang atau nasi goreng dengan saus khusus. Nasi goreng Jawa biasanya dibumbui dengan sambal ulek yang membuat rasanya pedas dan dimasak dengan kayu atau anglo.</p>
+                    <p>Paket 1 merupakan paket makanan yang terdiri dari : </p>
+                    <hr>
+                    <ol>
+                        <li>Nasi</li>
+                        <li>Ayam goreng</li>
+                        <li>Es teh</li>
+                    </ol>
                 </div>
                 <div class="snipcart-item block">
                     <div class="snipcart-thumb agileinfo_single_right_snipcart">
-                        <h4 class="m-sing">Rp 15.000,00</h4>
+                        <h4 class="m-sing">Rp 12.000,00</h4>
                     </div>
                     <div class="snipcart-details agileinfo_single_right_details">
                         <form action="#" method="post">
@@ -131,8 +137,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <input type="hidden" name="cmd" value="_cart">
                                 <input type="hidden" name="add" value="1">
                                 <input type="hidden" name="business" value=" ">
-                                <input type="hidden" name="item_name" value="Nasi Goreng Jawa" class="nama-makanan">
-                                <input type="hidden" name="amount" value="15000" class="harga-makanan">
+                                <input type="hidden" name="item_name" value="Paket 1" class="nama-makanan">
+                                <input type="hidden" name="amount" value="12000" class="harga-makanan">
                                 <input type="hidden" name="discount_amount" value="">
                                 <input type="hidden" name="currency_code" value="IDR">
                                 <input type="hidden" name="return" value=" ">
