--- a/Web/index.html
+++ b/Web/index.html
@@ -368,6 +368,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 <div class="clearfix"> </div>
             </div>
+            <hr>
             <div class="agile_top_brands_grids">
                 <div class="col-md-4 top_brand_left">
                     <div class="hover14 column">
@@ -379,44 +380,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <figure>
                                     <div class="snipcart-item block">
                                         <div class="snipcart-thumb">
-                                            <a href="detail.html"><img title=" " alt=" " src="images/nasi_goreng_jawa.jpg" class="gambar-makanan"></a>
-                                            <p>Nasi Goreng Jawa</p>
-                                            <h4>Rp 15.000,00</h4>
-                                        </div>
-                                        <div class="snipcart-details top_brand_home_details">
-                                            <form action="#" method="post">
-                                                <fieldset>
-                                                    <input type="hidden" name="cmd" value="_cart">
-                                                    <input type="hidden" name="add" value="1">
-                                                    <input type="hidden" name="business" value=" ">
-                                                    <input type="hidden" name="item_name" value="Nasi Goreng Jawa" class="nama-makanan">
-                                                    <input type="hidden" name="amount" value="15000" class="harga-makanan">
-                                                    <input type="hidden" name="discount_amount" value="">
-                                                    <input type="hidden" name="currency_code" value="IDR">
-                                                    <input type="hidden" name="return" value=" ">
-                                                    <input type="hidden" name="cancel_return" value=" ">
-                                                    <input type="submit" name="submit" value="Add to cart" class="button">
-                                                </fieldset>
-                                            </form>
-                                        </div>
-                                    </div>
-                                </figure>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 top_brand_left">
-                    <div class="hover14 column">
-                        <div class="agile_top_brand_left_grid">
-                            <div class="agile_top_brand_left_grid_pos">
-                                <!--<img src="images/offer.png" alt=" " class="img-responsive">-->
-                            </div>
-                            <div class="agile_top_brand_left_grid1">
-                                <figure>
-                                    <div class="snipcart-item block">
-                                        <div class="snipcart-thumb">
-                                            <a href="detail.html"><img title=" " alt=" " src="images/pecel_madiun.jpg"></a>
-                                            <p>Nasi Pecel Madiun</p>
+                                            <a href="detail-paket.html"><img title=" " alt=" " src="images/paket-1.png" class="gambar-makanan"></a>
+                                            <p>Nasi, ayam goreng, es teh</p>
                                             <h4>Rp 12.000,00</h4>
                                         </div>
                                         <div class="snipcart-details top_brand_home_details">
@@ -425,8 +390,44 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                     <input type="hidden" name="cmd" value="_cart">
                                                     <input type="hidden" name="add" value="1">
                                                     <input type="hidden" name="business" value=" ">
-                                                    <input type="hidden" name="item_name" value="Nasi Pecel Madiun">
-                                                    <input type="hidden" name="amount" value="12000">
+                                                    <input type="hidden" name="item_name" value="Paket 1" class="nama-makanan">
+                                                    <input type="hidden" name="amount" value="12000" class="harga-makanan">
+                                                    <input type="hidden" name="discount_amount" value="">
+                                                    <input type="hidden" name="currency_code" value="IDR">
+                                                    <input type="hidden" name="return" value=" ">
+                                                    <input type="hidden" name="cancel_return" value=" ">
+                                                    <input type="submit" name="submit" value="Add to cart" class="button">
+                                                </fieldset>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 top_brand_left">
+                    <div class="hover14 column">
+                        <div class="agile_top_brand_left_grid">
+                            <div class="agile_top_brand_left_grid_pos">
+                                <!--<img src="images/offer.png" alt=" " class="img-responsive">-->
+                            </div>
+                            <div class="agile_top_brand_left_grid1">
+                                <figure>
+                                    <div class="snipcart-item block">
+                                        <div class="snipcart-thumb">
+                                            <a href="detail-paket.html"><img title=" " alt=" " src="images/paket-2.png"></a>
+                                            <p>Nasi, Sayur sop, Telur dadar, Es teh</p>
+                                            <h4>Rp 10.000,00</h4>
+                                        </div>
+                                        <div class="snipcart-details top_brand_home_details">
+                                            <form action="#" method="post">
+                                                <fieldset>
+                                                    <input type="hidden" name="cmd" value="_cart">
+                                                    <input type="hidden" name="add" value="1">
+                                                    <input type="hidden" name="business" value=" ">
+                                                    <input type="hidden" name="item_name" value="Paket 2">
+                                                    <input type="hidden" name="amount" value="10000">
                                                     <input type="hidden" name="discount_amount" value="">
                                                     <input type="hidden" name="currency_code" value="IDR">
                                                     <input type="hidden" name="return" value=" ">
@@ -454,9 +455,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <figure>
                                     <div class="snipcart-item block">
                                         <div class="snipcart-thumb">
-                                            <a href="detail.html"><img src="images/nasi-ayam-penyet.jpeg" alt=" " class="img-responsive"></a>
-                                            <p>Nasi Ayam Penyet</p>
-                                            <h4>Rp 14.000,00</h4>
+                                            <a href="detail-paket.html"><img src="images/paket-3.png" alt=" " class="img-responsive"></a>
+                                            <p>Nasi, Tumis Kacang, Gurami goreng, Es teh</p>
+                                            <h4>Rp 12.000,00</h4>
                                         </div>
                                         <div class="snipcart-details top_brand_home_details">
                                             <form action="#" method="post">
@@ -464,8 +465,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                     <input type="hidden" name="cmd" value="_cart">
                                                     <input type="hidden" name="add" value="1">
                                                     <input type="hidden" name="business" value=" ">
-                                                    <input type="hidden" name="item_name" value="Nasi Ayam Penyet">
-                                                    <input type="hidden" name="amount" value="14000">
+                                                    <input type="hidden" name="item_name" value="Paket 3">
+                                                    <input type="hidden" name="amount" value="12000">
                                                     <input type="hidden" name="discount_amount" value="">
                                                     <input type="hidden" name="currency_code" value="IDR">
                                                     <input type="hidden" name="return" value=" ">
