--- a/Web/index.html
+++ b/Web/index.html
@@ -151,9 +151,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<figure>
 									<div class="snipcart-item block">
 										<div class="snipcart-thumb">
-											<a href="detail.html"><img title=" " alt=" " src="images/nasi_goreng_jawa.jpg" class="gambar-makanan"></a>
-											<p>Nasi Goreng Jawa</p>
-											<h4>Rp 15.000,00</h4>
+											<a href="detail.html"><img title=" " alt=" " src="images/lele_penyet.jpg" class="gambar-makanan"></a>
+											<p>Nasi Lele Penyet</p>
+											<h4>Rp 10.000,00</h4>
 										</div>
 										<div class="snipcart-details top_brand_home_details">
 											<form action="#" method="post">
@@ -161,8 +161,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 													<input type="hidden" name="cmd" value="_cart">
 													<input type="hidden" name="add" value="1">
 													<input type="hidden" name="business" value=" ">
-													<input type="hidden" name="item_name" value="Nasi Goreng Jawa" class="nama-makanan">
-													<input type="hidden" name="amount" value="15000" class="harga-makanan">
+													<input type="hidden" name="item_name" value="Nasi Lele Penyet" class="nama-makanan">
+													<input type="hidden" name="amount" value="10000" class="harga-makanan">
 													<input type="hidden" name="discount_amount" value="">
 													<input type="hidden" name="currency_code" value="IDR">
 													<input type="hidden" name="return" value=" ">
@@ -187,9 +187,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<figure>
 									<div class="snipcart-item block">
 										<div class="snipcart-thumb">
-											<a href="detail.html"><img title=" " alt=" " src="images/pecel_madiun.jpg"></a>
-											<p>Nasi Pecel Madiun</p>
-											<h4>Rp 12.000,00</h4>
+											<a href="detail.html"><img title=" " alt=" " src="images/sop.jpg"></a>
+											<p>Nasi Sop</p>
+											<h4>Rp 8.000,00</h4>
 										</div>
 										<div class="snipcart-details top_brand_home_details">
 											<form action="#" method="post">
@@ -197,8 +197,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 													<input type="hidden" name="cmd" value="_cart">
 													<input type="hidden" name="add" value="1">
 													<input type="hidden" name="business" value=" ">
-													<input type="hidden" name="item_name" value="Nasi Pecel Madiun">
-													<input type="hidden" name="amount" value="12000">
+													<input type="hidden" name="item_name" value="Nasi Sop">
+													<input type="hidden" name="amount" value="8000">
 													<input type="hidden" name="discount_amount" value="">
 													<input type="hidden" name="currency_code" value="IDR">
 													<input type="hidden" name="return" value=" ">
@@ -226,9 +226,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<figure>
 									<div class="snipcart-item block">
 										<div class="snipcart-thumb">
-											<a href="detail.html"><img src="images/nasi-ayam-penyet.jpeg" alt=" " class="img-responsive"></a>
-											<p>Nasi Ayam Penyet</p>
-											<h4>Rp 14.000,00</h4>
+											<a href="detail.html"><img src="images/kangkung.jpg" alt=" " class="img-responsive"></a>
+											<p>Nasi Tumis Kangkung</p>
+											<h4>Rp 6.000,00</h4>
 										</div>
 										<div class="snipcart-details top_brand_home_details">
 											<form action="#" method="post">
@@ -236,8 +236,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 													<input type="hidden" name="cmd" value="_cart">
 													<input type="hidden" name="add" value="1">
 													<input type="hidden" name="business" value=" ">
-													<input type="hidden" name="item_name" value="Nasi Ayam Penyet">
-													<input type="hidden" name="amount" value="14000">
+													<input type="hidden" name="item_name" value="Nasi Tumis Kangkung">
+													<input type="hidden" name="amount" value="6000">
 													<input type="hidden" name="discount_amount" value="">
 													<input type="hidden" name="currency_code" value="IDR">
 													<input type="hidden" name="return" value=" ">
