--- a/Web/index.html
+++ b/Web/index.html
@@ -151,7 +151,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<figure>
 									<div class="snipcart-item block">
 										<div class="snipcart-thumb">
-											<a href="detail.html"><img title=" " alt=" " src="images/lele_penyet.jpg" class="gambar-makanan"></a>
+											<a href="detail.html"><img title=" " alt=" " src="images/penyet_lele.jpg" class="gambar-makanan"></a>
 											<p>Nasi Lele Penyet</p>
 											<h4>Rp 10.000,00</h4>
 										</div>
