--- a/Web/index.html
+++ b/Web/index.html
@@ -483,6 +483,122 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 <div class="clearfix"> </div>
             </div>
+            <div class="agile_top_brands_grids">
+                <div class="col-md-4 top_brand_left">
+                    <div class="hover14 column">
+                        <div class="agile_top_brand_left_grid">
+                            <div class="agile_top_brand_left_grid_pos">
+                                <!--<img src="images/offer.png" alt=" " class="img-responsive">-->
+                            </div>
+                            <div class="agile_top_brand_left_grid1">
+                                <figure>
+                                    <div class="snipcart-item block">
+                                        <div class="snipcart-thumb">
+                                            <a href="detail-paket.html"><img title=" " alt=" " src="images/paket-4.png" class="gambar-makanan"></a>
+                                            <p>Nasi, pecel, tempe goreng, es teh</p>
+                                            <br>
+                                            <h4>Rp 5.000,00</h4>
+                                        </div>
+                                        <div class="snipcart-details top_brand_home_details">
+                                            <form action="#" method="post">
+                                                <fieldset>
+                                                    <input type="hidden" name="cmd" value="_cart">
+                                                    <input type="hidden" name="add" value="1">
+                                                    <input type="hidden" name="business" value=" ">
+                                                    <input type="hidden" name="item_name" value="Paket 4" class="nama-makanan">
+                                                    <input type="hidden" name="amount" value="5000" class="harga-makanan">
+                                                    <input type="hidden" name="discount_amount" value="">
+                                                    <input type="hidden" name="currency_code" value="IDR">
+                                                    <input type="hidden" name="return" value=" ">
+                                                    <input type="hidden" name="cancel_return" value=" ">
+                                                    <input type="submit" name="submit" value="Add to cart" class="button">
+                                                </fieldset>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 top_brand_left">
+                    <div class="hover14 column">
+                        <div class="agile_top_brand_left_grid">
+                            <div class="agile_top_brand_left_grid_pos">
+                                <!--<img src="images/offer.png" alt=" " class="img-responsive">-->
+                            </div>
+                            <div class="agile_top_brand_left_grid1">
+                                <figure>
+                                    <div class="snipcart-item block">
+                                        <div class="snipcart-thumb">
+                                            <a href="detail-paket.html"><img title=" " alt=" " src="images/paket-5.png"></a>
+                                            <p>3 Nasi, 3 ayam goreng, 3 es teh</p>
+                                            <br>
+                                            <h4>Rp 25.000</h4>
+                                        </div>
+                                        <div class="snipcart-details top_brand_home_details">
+                                            <form action="#" method="post">
+                                                <fieldset>
+                                                    <input type="hidden" name="cmd" value="_cart">
+                                                    <input type="hidden" name="add" value="1">
+                                                    <input type="hidden" name="business" value=" ">
+                                                    <input type="hidden" name="item_name" value="Paket 5">
+                                                    <input type="hidden" name="amount" value="25000">
+                                                    <input type="hidden" name="discount_amount" value="">
+                                                    <input type="hidden" name="currency_code" value="IDR">
+                                                    <input type="hidden" name="return" value=" ">
+                                                    <input type="hidden" name="cancel_return" value=" ">
+                                                    <input type="submit" name="submit" value="Add to cart" class="button">
+                                                </fieldset>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 top_brand_left">
+                    <div class="hover14 column">
+                        <div class="agile_top_brand_left_grid">
+                            <div class="agile_top_brand_left_grid_pos">
+                                <!--<img src="images/offer.png" alt=" " class="img-responsive">-->
+                            </div>
+                            <div class="agile_top_brand_left_grid_pos">
+                                <!--<img src="images/offer.png" alt=" " class="img-responsive">-->
+                            </div>
+                            <div class="agile_top_brand_left_grid1">
+                                <figure>
+                                    <div class="snipcart-item block">
+                                        <div class="snipcart-thumb">
+                                            <a href="detail-paket.html"><img src="images/paket-6.png" alt=" " class="img-responsive"></a>
+                                            <p>10 Nasi, 10 Tumis Kacang, 10 Telur dadar, 10 Es teh</p>
+                                            <h4>Rp 70.000,00</h4>
+                                        </div>
+                                        <div class="snipcart-details top_brand_home_details">
+                                            <form action="#" method="post">
+                                                <fieldset>
+                                                    <input type="hidden" name="cmd" value="_cart">
+                                                    <input type="hidden" name="add" value="1">
+                                                    <input type="hidden" name="business" value=" ">
+                                                    <input type="hidden" name="item_name" value="Paket 6">
+                                                    <input type="hidden" name="amount" value="70000">
+                                                    <input type="hidden" name="discount_amount" value="">
+                                                    <input type="hidden" name="currency_code" value="IDR">
+                                                    <input type="hidden" name="return" value=" ">
+                                                    <input type="hidden" name="cancel_return" value=" ">
+                                                    <input type="submit" name="submit" value="Add to cart" class="button">
+                                                </fieldset>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="clearfix"> </div>
+            </div>
 		</div>
 		<div class="clearfix"> </div>
 	</div>
