--- a/Web/index.html
+++ b/Web/index.html
@@ -104,6 +104,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="index.html" class="act">Home</a></li>
+					<li class="active"><a href="profileui.html" class="act">My Account</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -603,7 +604,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="clearfix"> </div>
 	</div>
 </div>
-
+<div align="center" class="footer">
+		<div class="footer-copy">
+			<div class="container">
+				<p>© 2017 FOOD KOST | FPRKC</p>
+				<h1 style="font-size: 15px; color:#006666;">5114100006 | 5114100090 | 5114100121</h1>				
+			</div>
+		</div>
+</div>
 <!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
 <!-- top-header and slider -->
