--- a/Web/checkouts.html
+++ b/Web/checkouts.html
@@ -241,7 +241,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</ul>
 				</div>
 				<div class="checkout-right-basket">
-					<a href="confirm.html"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>Konfirmasi Pembayaran</a>
+					<a href="confirm.html"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>Konfirmasi Pesanan</a>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
